Fix some errors